<resources>
    <string name="app_name">ClosetVitual</string>
    <string name="title_home">Inicio</string>
    <string name="title_RegistroPrenda">Nueva prenda</string>
    <string name="title_Ropero">Ropero</string>
    <string name="title_Outfits">Outfits</string>
    <string name="title_Calendario">Calendario</string>
    <string name="bienvenidoUsuario">¡Bienvenido!</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notificaciones</string>
    <string name="tusOutfits">Tus outfits</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="color">color:</string>
    <string name="seleccionar_color">seleccionar color:</string>
    <string name="estampada_s_no">Estampado:</string>
    <string name="registra_una_prenda">Registra una prenda:</string>
    <string name="nombre">Nombre:</string>
    <string name="ropero">Tus outfits</string>
    <string name="ingrese_nombre_de_su_prenda">Ingrese nombre de la prenda...</string>
    <string name="foto">Foto:</string>
    <string name="editar_foto">editar foto:</string>
    <string name="tipo_de_prenda">Tipo de prenda:</string>
    <string name="tags">Tags:</string>
    <string name="s">Si</string>
    <string name="no">No</string>
    <string name="registrar_prenda">Registrar Prenda</string>
    <string name="registra_tu_outfit">registra tu outfit</string>
    <string name="logo">logo</string>
    <string-array name="tipo_de_prenda_array">
        <item>Sombreros</item>
        <item>Accesorios</item>
        <item>Camisetas y similares</item>
        <item>Abrigos y chaquetas</item>
        <item>Pantalones y shorts</item>
        <item>Zapatos</item>
        <item>Bodysuits</item>
    </string-array>
</resources>