<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/title_home"
        android:iconTint="@color/mostaza"/>

    <item
        android:id="@+id/navigation_NuevaPrenda"
        android:icon="@drawable/baseline_add_circle_outline_24"
        android:title="@string/title_RegistroPrenda" />

    <item
        android:id="@+id/navigation_Ropero"
        android:icon="@drawable/baseline_checkroom_24"
        android:title="@string/title_Ropero" />

    <item
        android:id="@+id/navigation_Outfits"
        android:icon="@drawable/baseline_assignment_add_24"
        android:title="@string/title_Outfits" />

</menu>