<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_new_prenda"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/grisClaro"
    tools:context=".MainActivity">


    <!-- Barra superior negra -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/black" />


    <!-- Barra de título mostaza -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/mostaza"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registra_una_prenda"
            android:textColor="#FFFF"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>


    <!-- Nombre -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <EditText
        android:id="@+id/editTextNombre"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:background="@android:drawable/edit_text"
        android:hint="@string/ingrese_nombre_de_su_prenda"
        />


    <!-- Foto -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/foto"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <ImageButton
        android:id="@+id/btn_editar_foto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/editar_foto"
        android:src="@drawable/baseline_add_circle_outline_24"
        android:scaleType="fitCenter"
        tools:ignore="ImageContrastCheck" />






    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_de_prenda"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <Spinner
        android:id="@+id/spinner_tipo_prenda"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:entries="@array/tipo_de_prenda_array"/>


    <!-- Tags -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tags"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>


    <Spinner
        android:layout_width="match_parent"
        android:layout_height="48dp" />


    <!-- Color -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/color"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>




    <ImageButton
        android:id="@+id/btn_editar_color"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/seleccionar_color"
        android:src="@drawable/baseline_add_circle_outline_24"
        android:scaleType="fitCenter"
        tools:ignore="ImageContrastCheck" />


    <!-- Estampada -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estampada_s_no"
        android:textStyle="bold"
       />


    <RadioGroup
        android:id="@+id/radioGroupEstampado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"/>


        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"/>
    </RadioGroup>


    <!-- Botón de registro -->
    <Button
        android:id="@+id/btnRegistarPrenda"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="70dp"
        android:backgroundTint="#203F74"
        android:text="@string/registrar_prenda"
        android:textColor="@android:color/white" />
</LinearLayout>
